<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weather"
    android:orientation="vertical"
    android:padding="7dp"
    android:weightSum="6"
    tools:context=".WeatherDataPart2Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="2"
        android:autoSizeTextType="uniform"
        android:text="@string/additional_info"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:text="@string/wind_strength"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/wind_strength"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:text="@string/wind_direction"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/wind_direction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:textColor="@color/black" />
</androidx.appcompat.widget.LinearLayoutCompat>