<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weather"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".WeatherDataPart1Fragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:padding="7dp"
        android:weightSum="12">

        <TextView
            android:id="@+id/location_name"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/coords"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/coords"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/time"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/temperature"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/pressure"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/description"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</androidx.appcompat.widget.LinearLayoutCompat>